--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
         <h3>💌 Get In Touch With The F&F Team! 🐾</h3>
         <div class="contact-info">
             <p>We're here to help you find the perfect style for your furry friend! Reach out for sizing, styling advice, or any questions.</p>
-            <p><strong>Email:</strong> <a href="mailto:hello@furryandfabulous.com">hello@furryandfabulous.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+1555PAWFECT">+1 (555) PAWFECT</a></p>
+            <p><strong>Email:</strong> <a href="mailto:niuza@gmail.com">niuza@gmail.com</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+8619502687943PAWFECT">+86 19502687943 PAWFECT</a></p>
             <p><strong>Hours:</strong> Mon - Fri, 9 AM - 6 PM EST</p>
         </div>
     </div>
@@ -550,4 +550,5 @@
     </footer>
 
 </body>
+
 </html>
