--- a/index.html
+++ b/index.html
@@ -506,12 +506,18 @@
                 <div class="tag">PINK RAIN!</div>
                 <div class="product-image">
                     Image Placeholder: Bubblegum Rain Slicker
-                </div>
-                <h4>The "Puddle Jumper" Raincoat</h4>
-                <p>Waterproof, vibrant pink, and utterly chic. Keep your pup dry and stylish on the cloudiest of days!</p>
-                <p class="price">$42.99</p>
-            </div>
-
+               <div class="product-card">
+    <div class="tag">PINK RAIN!</div>
+  <div class="product-card">
+    <div class="tag">PINK RAIN!</div>
+    <div class="product-image">
+        <img src="images/https://cbu01.alicdn.com/img/ibank/O1CN01HjNcVS1nwaOjbsKKP_!!2220222005154-0-cib.jpg
+" alt="泡泡糖色雨衣" style="width: 100%;">
+    </div>
+    <h4>The "Puddle Jumper" Raincoat</h4>
+    <p>Waterproof, vibrant pink, and utterly chic. Keep your pup dry and stylish on the cloudiest of days!</p>
+    <p class="price">$42.99</p>
+</div>
             <div class="product-card">
                 <div class="tag">LIMITED EDITION!</div>
                 <div class="product-image">
@@ -552,3 +558,4 @@
 </body>
 
 </html>
+
