--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
   <div class="product-card">
     <div class="tag">PINK RAIN!</div>
     <div class="product-image">
-        <img src="images/https://cbu01.alicdn.com/img/ibank/O1CN01HjNcVS1nwaOjbsKKP_!!2220222005154-0-cib.jpg
+        <img src="images/1/https://cbu01.alicdn.com/img/ibank/O1CN01HjNcVS1nwaOjbsKKP_!!2220222005154-0-cib.jpg
 " alt="泡泡糖色雨衣" style="width: 100%;">
     </div>
     <h4>The "Puddle Jumper" Raincoat</h4>
@@ -558,4 +558,5 @@
 </body>
 
 </html>
+
 
