--- a/index.html
+++ b/index.html
@@ -507,17 +507,16 @@
                 <div class="product-image">
                     Image Placeholder: Bubblegum Rain Slicker
                <div class="product-card">
-    <div class="tag">PINK RAIN!</div>
-  <div class="product-card">
-    <div class="tag">PINK RAIN!</div>
-    <div class="product-image">
-        <img src="images/1
-" alt="泡泡糖色雨衣" style="width: 100%;">
-    </div>
-    <h4>The "Puddle Jumper" Raincoat</h4>
-    <p>Waterproof, vibrant pink, and utterly chic. Keep your pup dry and stylish on the cloudiest of days!</p>
-    <p class="price">$42.99</p>
-</div>
+               <div class="tag">PINK RAIN!</div>
+               <div class="product-card">
+               <div class="tag">PINK RAIN!</div>
+               <div class="product-image">
+                     <img src="images/1" alt="泡泡糖色雨衣" style="width: 100%;">
+          </div>
+          <h4>The "Puddle Jumper" Raincoat</h4>
+          <p>Waterproof, vibrant pink, and utterly chic. Keep your pup dry and stylish on the cloudiest of days!</p>
+          <p class="price">$42.99</p>
+      </div>
             <div class="product-card">
                 <div class="tag">LIMITED EDITION!</div>
                 <div class="product-image">
@@ -558,6 +557,7 @@
 </body>
 
 </html>
+
 
 
 
